2017-08-12  Pierre-Marie de Rodat  <derodat@adacore.com>

	PR ada/79542
	* gnat.dg/debug13.ads, gnat.dg/debug13.adb: New testcase.

2017-08-11  Marek Polacek  <polacek@redhat.com>

	PR c/81795
	* gcc.dg/pr81795.c: New test.

2017-08-11  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/60355
	* gfortran.dg (bind_c_usage_30): New test.

2017-08-11  Martin Liska  <mliska@suse.cz>

	PR tree-opt/79987
	* gcc.target/i386/mpx/pr79987.c: New test.

2017-08-11  Martin Liska  <mliska@suse.cz>

	PR ipa/81213
	* gcc.target/i386/pr81213.c: New test.

2017-08-10  Uros Bizjak  <ubizjak@gmail.com>

	PR target/81708
	* gcc.target/i386/stack-prot-sym.c: New test.

2017-08-10  Richard Sandiford  <richard.sandiford@linaro.org>

	PR testsuite/81738
	* gcc.dg/vect/vect-alias-check-6.c: Move second function to...
	* gcc.dg/vect/vect-alias-check-7.c: ...this new file.  Require
	vect_perm and vect_element_align for vectorization.

2017-08-10  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/81736
	* gcc.target/i386/pr81736-1.c: New test.
	* gcc.target/i386/pr81736-2.c: Likewise.
	* gcc.target/i386/pr81736-3.c: Likewise.
	* gcc.target/i386/pr81736-4.c: Likewise.
	* gcc.target/i386/pr81736-5.c: Likewise.
	* gcc.target/i386/pr81736-6.c: Likewise.
	* gcc.target/i386/pr81736-7.c: Likewise.

2017-08-10  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* gcc.target/powerpc/fold-vec-msum-short.c: Fix typo.
	* gcc.target/powerpc/fold-vec/pack-longlong.c: Mark for 64-bit only.

2017-08-10  David Malcolm  <dmalcolm@redhat.com>

	* c-c++-common/missing-close-symbol.c: New test case.
	* c-c++-common/missing-symbol.c: New test case.
	* gcc.dg/unclosed-init.c: New test case.
	* g++.dg/diagnostic/unclosed-extern-c.C: New test case.
	* g++.dg/diagnostic/unclosed-function.C: New test case.
	* g++.dg/diagnostic/unclosed-namespace.C: New test case.
	* g++.dg/diagnostic/unclosed-struct.C: New test case.
	* g++.dg/parse/pragma2.C: Update to reflect movement of the
	"expected identifier" error.
