@@ -1,4 +1,6 @@
-/* { dg-do run { target pie } } */
+/* { dg-do run } */
+/* { dg-require-effective-target static } */
+/* { dg-require-effective-target pie } */
 /* { dg-options "-static -fpie -pie" } */
 
 int main(void)
