@@ -1,4 +1,6 @@
-/* { dg-do run { target pie } } */
+/* { dg-do run } */
+/* { dg-require-effective-target pie } */
+/* { dg-require-effective-target static } */
 /* { dg-options "-fpie -pie -static" } */
 
 int main(void)
